add stock summery

--- a/index.html
+++ b/index.html
@@ -96,7 +96,49 @@
     <p>increase the product ha.</p>
     <img src="./media/add.svg" alt="">
 </section>
-<section class="order-statistic-container child7"></section>
+
+<section class="order-statistic-container child7">
+    <h3>Stock Summery</h3>
+
+    <div class="summery-container">
+        <div>
+            <div class="stock-container">
+                <div class="checkbox-add"></div>
+                <p>Added Stock</p>
+            </div>
+            <div class="stock-container">
+                <div class="checkbox-available"></div>
+                <p>Available Stock</p>
+            </div>
+        </div>
+        
+        <div class="figure-container">
+            <img src="./media/Group 1635.svg" alt="">
+            <span>100%</span>
+        </div>
+        
+    </div>
+    <h5>Low stock Products</h5>
+    <div class="low-stock">
+        <p>Product name</p>
+        <p class="remaining">Remaining 10%</p>
+    </div>
+    <hr>
+    <div class="low-stock">
+        <p>Product name</p>
+        <p class="remaining">Remaining 25%</p>
+    </div>
+    <hr>
+    <div class="low-stock">
+        <p>Product name</p>
+        <p class="remaining">Remaining 33%</p>
+    </div>
+    <hr>
+    <div class="low-stock">
+        <p>Product name</p>
+        <p class="remaining">Remaining 35%</p>
+    </div>
+</section>
 
 
 
